--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "@jaimadhukar/medium-common": "^1.0.0",
     "@prisma/client": "^5.20.0",
     "@prisma/extension-accelerate": "^1.2.1",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.4",
     "prisma": "^5.20.0",
     "zod": "^3.23.8"
