--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -3,9 +3,9 @@ main = "src/index.ts"
 compatibility_date = "2024-10-13"
 compatibility_flags = [ "nodejs_compat" ]
 
-# [vars]
-# DATABASE_URL=""
-# JWT_SECRET = 
+[vars]
+DATABASE_URL = ""
+JWT_SECRET = ""
 
 # [[kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
